finished with pictures gallery page

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <h2 class="title">Home Remodeling <span class="hero__title-span">You Can Count On</span></h2>
       <div class="hero__block">
         <p class="text hero__text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</p>
-        <!-- <button class="hero__button text__link">View My Work
+        <a href="./gallery.html" class="hero__button text__link link">View My Work
           <img src="./images/arrow-right.svg" class="button__svg" alt="arrow-right">
-        </button> -->
+        </a>
 
     </div>
       </div>
@@ -199,7 +199,7 @@
       </li>
     </ul>
   
-    <!-- <a href="./gallery.html" class="link advantages__link advantages__text">View my work</a> -->
+    <a href="./gallery.html" class="link advantages__link advantages__text">View my work</a>
 
   </div>
 </section>
@@ -243,13 +243,11 @@
     <div class="works__block">
     
       <div class="works__text__container">
-           <h3 class="solve__text black__2 works__subtitle">Basement Remodel </h3>
-           <p class="works__text">Illinois, Chicago</p>
-           <p class="text__article works__article">Finished a dark, unused basement into a bright and cozy family space with new flooring, walls, and lighting</p>
-          </div>
-          <!-- <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
-            <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
-          </a> -->
+          <p class="text__article works__article">Here are a few of my recent projects — from kitchens to basements. I take pride in doing solid work that speaks for itself</p>
+      </div>
+      <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+           <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
+      </a>
   
     </div>
   
