--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            <a href="./gallery.html" class="link header__text header__link">Gallery</a>
          </li>
          <li>
-           <a href="" class="link header__text header__link">Our services</a>
+           <a href="#services" class="link header__text header__link">Our services</a>
          </li>
          <!-- <li>
              <a href="" class="link header__text header__link">Contacts</a>
@@ -66,7 +66,7 @@
             <a href="./gallery.html" class="link menu__mobile-text header__link">Gallery</a>
           </li>
           <li class="">
-            <a href="" class="link menu__mobile-text header__link">Our services</a>
+            <a href="./index.html#services" class="link menu__mobile-text header__link">Our services</a>
           </li>
           <!-- <li class="">
             <a href="" class="link menu__mobile-text header__link">Contacts</a>
@@ -155,7 +155,7 @@
         </form>
 </section>
 
-<section class="container__gray ">
+<section class="container__gray" id="about">
   <div class="section__help">
     <div>
       <h2 class="subtitle">Need a Hand With Your Next Home Project?</h2> 
@@ -204,7 +204,7 @@
   </div>
 </section>
 
-<section class="container__white ">
+<section class="container__white" id="services">
   <div class="solve__container">
 
     <h2 class="subtitle solve__subtitle">We solve your problems</h2>
@@ -237,7 +237,7 @@
   </div>
 </section>
 
-<section class="container__gray ">
+<section class="container__gray" id="works">
   <div class="works__container">
     <h2 class="subtitle works_title">A Look at Our Work</h2>
     <div class="works__block">
@@ -501,7 +501,7 @@
   </div>
 </section>
 
-<section class="container__black">
+<section class="container__black" id="faq">
   <div class="questions__container">
     <div class="questions__container-list">
       <h2 class="subtitle questions__subtitle">Your burning questions answered</h2>
@@ -616,7 +616,7 @@
         </div>
         <div class="footer__text-container">
           <h3 class="footer__subtitle">our location</h3>
-          <p class="footer__article">4935 N Menard Ave, Illinois, Chicago</p>
+          <a href="https://maps.app.goo.gl/3QQsr4uesby6tfw9A" class="link footer__article ">4935 N Menard Ave, Illinois, Chicago</a>
         </div>
       </div>
       
@@ -629,23 +629,19 @@
     <div>
       <ul class="footer__link__list">
         <li class="footer__link__item">
-          <a href="" class="link footer__links">about us</a>
+          <a href="#about" class="link footer__links">about us</a>
         </li>
         <li class="footer__link__item">
-          <a href="" class="link footer__links">services</a>
+          <a href="#services" class="link footer__links">services</a>
         </li>
         <li class="footer__link__item">
-          <a href="" class="link footer__links">our works</a>
+          <a href="#works" class="link footer__links">our works</a>
         </li>
         <li class="footer__link__item">
-          <a href="" class="link footer__links">faq</a>
+          <a href="#faq" class="link footer__links">faq</a>
         </li>
       </ul>
     </div>
-    <!-- <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83673.77354722226!2d-87.8564108802135!3d41.978666596119126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fcc06f037f881%3A0xb90d7e0e7fbea410!2s4935%20N%20Menard%20Ave!5e0!3m2!1suk!2sua!4v1748963877466!5m2!1suk!2sua"
-      width="1400" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe> -->
     <img src="./images/logo-footer-mob.svg" class="footer__logo" alt="logo" >
   </div>
 </footer>
