--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,8 @@
         content="Zhuraki Remodeling offers professional home renovation, tile installation, and finishing services. Reliable team, quality work, and outstanding results in every project.">
     <meta name="keywords"
         content="home renovation, tile installation, remodeling services, drywall, painting, flooring, Zhuraki Remodeling">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
