--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zhuraki Remodeling | Home Renovation & Tile Installation Experts</title>
     <meta name="description" content="Zhuraki Remodeling offers professional home renovation, tile installation, and finishing services. Reliable team, quality work, and outstanding results in every project.">
     <meta name="keywords" content="home renovation, tile installation, remodeling services, drywall, painting, flooring, Zhuraki Remodeling">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
