--- a/gallery.html
+++ b/gallery.html
@@ -524,7 +524,7 @@
     <script type="module" src="./js/settingsFB.js"></script>
     <script type="module" src="./js/review-modal.js"></script>
     <script type="module" src="./js/questions.js"></script>
-    <script type="module" src="./js/form-quote-submit.js"></script>
+    <!-- <script type="module" src="./js/form-quote-submit.js"></script> -->
     <script type="module" src="./js/modal-quote.js"></script>
     <script type="module" src="./js/menu-mobile.js"></script>
     <script type="module" src="./js/load-more.js"></script>
