adding images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -36,9 +36,9 @@
                     <li>
                    <a href="./gallery.html" class="link header__text header__link">Gallery</a>
                  </li>
-                 <li>
+                 <!-- <li>
                    <a href="./index.html#services" class="link header__text header__link">Our services</a>
-                 </li>
+                 </li> -->
                  <!-- <li>
                      <a href="" class="link header__text header__link">Contacts</a>
                   </li> -->
@@ -299,6 +299,42 @@
                                 media="(max-width: 743px)" />
                             <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/12-mob-1x-min_lqeh81.jpg"
                                 alt="kitchen" />    </picture>
+                    </li>
+                    <li class="gallery-item">
+                        <picture>
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051294/zhuraki/our%20projects/desktop/13-desk-1x-min_dncndh.jpg 1x,
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051294/zhuraki/our%20projects/desktop/13-desk-2x-min_nrhxwz.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051576/zhuraki/our%20projects/tablet/13-tab-1x-min_bu2u0k.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051576/zhuraki/our%20projects/tablet/13-tab-2x-min_ycu4fx.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051735/zhuraki/our%20projects/mobile/13-mob-1x-min_v1uzwq.jpg, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051757/zhuraki/our%20projects/mobile/13-mob-2x-min_whkum8.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051735/zhuraki/our%20projects/mobile/13-mob-1x-min_v1uzwq.jpg"
+                                alt="kitchen" />
+                        </picture>
+                    </li>
+                    <li class="gallery-item">
+                        <picture>
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051295/zhuraki/our%20projects/desktop/14-desk-1x-min_zvcvyf.jpg 1x,
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051295/zhuraki/our%20projects/desktop/14-desk-2x-min_nkgsfu.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051578/zhuraki/our%20projects/tablet/14-tab-1x-min_yfdhbq.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051714/zhuraki/our%20projects/tablet/14-tab-2x-min_ali02o.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051812/zhuraki/our%20projects/mobile/14-mob-1x-min_bptb4n.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051813/zhuraki/our%20projects/mobile/14-mob-2x-min_yy6lkw.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751051812/zhuraki/our%20projects/mobile/14-mob-1x-min_bptb4n.jpg"
+                                alt="kitchen" />
+                        </picture>
                     </li>
                 </ul>
                 <button type="button" class="gallery__button__load">Load more</button>
