--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
          <li>
            <a href="./gallery.html" class="link header__text header__link">Gallery</a>
          </li>
-         <li>
+         <!-- <li>
            <a href="#services" class="link header__text header__link">Our services</a>
-         </li>
+         </li> -->
          <!-- <li>
              <a href="" class="link header__text header__link">Contacts</a>
           </li> -->
@@ -359,6 +359,46 @@
              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748163351/zhuraki/main%20page%20gallery/7_mob_1x-min_r8is60.jpg" alt="modern room"/>
     </picture>
   </div>
+
+  <div class="swiper-slide">
+    <picture>
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751050536/zhuraki/main%20page%20gallery/9-desk-1x-min_sde9m0.jpg 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751050536/zhuraki/main%20page%20gallery/9-desk-2x-min_awnqh9.jpg 2x"
+        media="(min-width: 1440px)" />
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052361/zhuraki/main%20page%20gallery/9-tab-1x-min_a4xths.jpg 1x, 
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052363/zhuraki/main%20page%20gallery/9-tab-2x-min_vuzexy.jpg 2x"
+        media="(min-width: 744px) and (max-width: 1439px)" />
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052859/zhuraki/main%20page%20gallery/9-mob-1x-min_lbmipg.jpg 1x, 
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052861/zhuraki/main%20page%20gallery/9-mob-2x-min_rzasht.jpg 2x"
+        media="(max-width: 743px)" />
+      <img
+        src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052859/zhuraki/main%20page%20gallery/9-mob-1x-min_lbmipg.jpg"
+        alt="modern room" />
+    </picture>
+  </div>
+
+  <div class="swiper-slide">
+    <picture>
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751050536/zhuraki/main%20page%20gallery/8-desk-1x-min_fonv4y.jpg 1x,
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751050536/zhuraki/main%20page%20gallery/8-desk-2x-min_jbvobx.jpg 2x"
+        media="(min-width: 1440px)" />
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052364/zhuraki/main%20page%20gallery/10-tab-1x-min_pwmr1u.jpg 1x, 
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052366/zhuraki/main%20page%20gallery/10-tab-2x-min_wybljd.jpg 2x"
+        media="(min-width: 744px) and (max-width: 1439px)" />
+      <source
+        srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052863/zhuraki/main%20page%20gallery/10-mob-1x-min_qt391s.jpg 1x, 
+        https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052864/zhuraki/main%20page%20gallery/10-mob-2x-min_zhdwyy.jpg 2x"
+        media="(max-width: 743px)" />
+      <img
+        src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751052863/zhuraki/main%20page%20gallery/10-mob-1x-min_qt391s.jpg"
+        alt="modern room" />
+    </picture>
+  </div>
   
    </div>
     <div class=" custom__next">
@@ -420,11 +460,30 @@
       </div>
       <div class="swiper-slide ">
         <picture>
-                <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg 1x,
-                 https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198367/zhuraki/swiper%20mini%20foto/7_2x_xlccau.jpg 2x"/>
-                <img src="hhttps://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg" alt="decorated walls" />
+          <source
+            srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg 1x,
+            https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198367/zhuraki/swiper%20mini%20foto/7_2x_xlccau.jpg 2x" />
+          <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/7_zos5qx.jpg"
+            alt="fireplace" />
         </picture>
       </div>
+      <div class="swiper-slide ">
+        <picture>
+                <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054181/zhuraki/swiper%20mini%20foto/8-1x_ydim81.jpg 1x,
+                https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054183/zhuraki/swiper%20mini%20foto/8-2x_v4mbgc.jpg 2x"/>
+                <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054181/zhuraki/swiper%20mini%20foto/8-1x_ydim81.jpg" alt="decorated walls" />
+        </picture>
+      </div>
+      <div class="swiper-slide ">
+        <picture>
+          <source
+            srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054185/zhuraki/swiper%20mini%20foto/9-1x_theyq8.jpg 1x,
+            https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054187/zhuraki/swiper%20mini%20foto/9-2x_es1aig.jpg 2x" />
+          <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1751054185/zhuraki/swiper%20mini%20foto/9-1x_theyq8.jpg"
+            alt="fireplace" />
+        </picture>
+      </div>
+      
   
     </div>
   </div>
