hover and focus for buttons and links

--- a/gallery.html
+++ b/gallery.html
@@ -66,9 +66,9 @@
                     <li class="">
                     <a href="./gallery.html" class="link menu__mobile-text header__link">Gallery</a>
                   </li>
-                  <li class="">
+                  <!-- <li class="">
                     <a href="./index.html#services" class="link menu__mobile-text header__link">Our services</a>
-                  </li>
+                  </li> -->
                   <!-- <li class="">
                     <a href="" class="link menu__mobile-text header__link">Contacts</a>
                   </li> -->
@@ -447,7 +447,7 @@
                                 class="quote__textarea form-text pure-white"></textarea>
                         </div>
             
-                        <button type="submit" id="quoteButton" class=" text__link button  ">Get a Free Quote
+                        <button type="submit" id="quoteButton" class=" text__link form__button  ">Get a Free Quote
                             <img src="./images/arrow-narrow-right.svg" alt="arrow right black" class="form__button-svg">
                         </button>
                     </form>
