--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <li class="">
             <a href="./gallery.html" class="link menu__mobile-text header__link">Gallery</a>
           </li>
-          <li class="">
+          <!-- <li class="">
             <a href="./index.html#services" class="link menu__mobile-text header__link">Our services</a>
-          </li>
+          </li> -->
           <!-- <li class="">
             <a href="" class="link menu__mobile-text header__link">Contacts</a>
           </li> -->
@@ -96,7 +96,7 @@
       <h2 class="title">Home Remodeling <span class="hero__title-span">You Can Count On</span></h2>
       <div class="hero__block">
         <p class="text hero__text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</p>
-        <a href="./gallery.html" class="hero__button text__link link">View My Work
+        <a href="./gallery.html" class="primary__button hero__button link">View My Work
           <img src="./images/arrow-right.svg" class="button__svg" alt="arrow-right">
         </a>
 
@@ -150,7 +150,7 @@
             <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
           </div>
 
-        <button type="submit" id="quoteButton" class=" text__link button  ">Get a Free Quote
+        <button type="submit" id="quoteButton" class=" text__link form__button  ">Get a Free Quote
           <img src="./images/arrow-narrow-right.svg" alt="arrow right black" class="form__button-svg">
         </button>
         </form>
@@ -232,7 +232,7 @@
       </li>
     </ul>
     <h3 class="solve__text">If you <span class="black">have something else</span> in mind — <span class="black">just ask</span></h3>
-    <button class="solve__button text__link modal__quote-open">Text Me Now
+    <button class="primary__button solve__button modal__quote-open">Text Me Now
       <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
     </button>
   </div>
@@ -246,7 +246,7 @@
       <div class="works__text__container">
           <p class="text__article works__article">Here are a few of my recent projects — from kitchens to basements. I take pride in doing solid work that speaks for itself</p>
       </div>
-      <a href="./gallery.html" class="solve__button text__link link works__button">View Full Gallery
+      <a href="./gallery.html" class="primary__button link works__button">View Full Gallery
            <img src="./images/arrow-right.svg" alt="arrow-right" class="button__svg">
       </a>
   
@@ -656,7 +656,7 @@
               <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
             </div>
   
-          <button type="submit" id="quoteButton" class=" text__link button  ">Get a Free Quote
+          <button type="submit" id="quoteButton" class=" text__link form__button  ">Get a Free Quote
             <img src="./images/arrow-narrow-right.svg" alt="arrow right black" class="form__button-svg">
           </button>
           </form>
